# llm_agents

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  script.py
data/: AUDI.csv  BMW.csv  CHEVROLET.csv  DODGE.csv  FORD.csv  HONDA.csv  HYUNDAI.csv  JEEP.csv  KIA.csv  LEXUS.csv  MAZDA.csv  MERCEDES_BENZ.csv  MITSUBISHI.csv  NISSAN.csv  PORSCHE.csv  SUBARU.csv  TOYOTA.csv  VOLKSWAGEN.csv  all_brands_combined.csv  brand_decade_summary.csv
data/text_corpus/: Brazil Aerospace.txt  Brazil Agriculture.txt  Brazil Energy.txt  Brazil Finance.txt  Brazil Health Care.txt  Brazil Manufacturing.txt  Brazil Retail.txt  Brazil Transportation.txt  Japan Aerospace.txt  Japan Agriculture.txt  Japan Energy.txt  Japan Finance.txt  Japan Health Care.txt  Japan Manufacturing.txt  Japan Retail.txt  Japan Transportation.txt  Mexico Aerospace.txt  Mexico Agriculture.txt  Mexico Energy.txt  Mexico Finance.txt  Mexico Health Care.txt  Mexico Manufacturing.txt  Mexico Retail.txt  Mexico Transportation.txt  Sweden Aerospace.txt  Sweden Agriculture.txt  Sweden Energy.txt  Sweden Finance.txt  Sweden Health Care.txt  Sweden Manufacturing.txt  Sweden Retail.txt  Sweden Transportation.txt  question_0.txt  question_10.txt  question_100.txt  question_1002.txt  question_1003.txt  question_1004.txt  question_1009.txt  question_101.txt  (+2958 more)
intro_to_agents/: 1 - load_vectordb.ipynb  2 - structured_outputs.ipynb  3 - rag_agent.ipynb  4 - sql_agent.ipynb  5 - composite_agent.ipynb
intro_to_agents/agents/: agents.py  llms.py
intro_to_agents/rag/: chunkers.py  text_extractors.py  vector_databases.py
