[tool.poetry]
name = "intro-to-agents"
version = "0.1.0"
description = ""
authors = ["Sheboyganaire <123134257+Sheboyganaire@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "intro_to_agents" },
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.12.5"
sqlalchemy = "^2.0.45"
tiktoken = "^0.12.0"
llama-index = "^0.14.10"
ipykernel = "^7.1.0"
sentence-transformers = "^5.2.0"
openai = "^2.14.0"
chromadb = "^1.3.7"
markitdown = "^0.1.4"
pdfplumber = "^0.11.8"
python-pptx = "^1.0.2"
python-dotenv = "^1.2.1"
python-docx = "^1.2.0"
pandas = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"